# PRET_A_DEPENSER

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci-cd.yml
config/: config.py  logger.py
notebooks/: monitioring.ipynb  training_data_treatment.ipynb
scripts/: compare_cb_onnx.py  download_model_from_hf.py  profile_api.py  upload_model_to_hf.py
src/api/: main.py  routes.py  schemas.py
src/api/database/: database.py  table_models.py
src/app/: main.py  routes.py  schemas.py  utils.py
src/app/static/: scoring_template_app.csv
src/model/: hf_interaction.py  mlflow_interaction.py  model_service.py
tests/: conftest.py
tests/functional/: test_api.py  test_database.py
tests/unit/: test_model_service.py  test_schemas.py
