[project]
name = "pret-a-depenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "evidently>=0.7.20",
    "fastapi[standard]>=0.128.0",
    "huggingface-hub>=1.2.3",
    "ipykernel>=7.1.0",
    "mlflow>=3.8.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
